Add all changes to check CI pipeline
